# DNSCrypt-Sorter

./: .gitignore  README.md  ping_dnscrypt.py  pyproject.toml
dnscrypt_sorter/: __init__.py  cli.py  filters.py  latency.py  models.py  source.py  ui.py
tests/: test_cli.py  test_filters.py  test_latency.py  test_source.py
