[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dnscrypt-sorter"
version = "0.5.0"
description = "DNSCrypt-Sorter — measure and rank DNS resolvers by latency"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Magalame" }
]
dependencies = [
  "rich>=13.7.0"
]

[project.scripts]
dnscrypt-sorter = "dnscrypt_sorter.cli:main"

[tool.setuptools]
packages = ["dnscrypt_sorter"]
